ingress/gce-ingress/kuard-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kuard
  name: kuard-canary
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: kuard
      track: canary
  template:
    metadata:
      labels:
        app: kuard
        track: canary
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:2
        imagePullPolicy: Always
        name: kuard
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "1000m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
